# Helthana

./: .gitignore  Dockerfile  README.md  docker-compose.github.yml  docker-compose.yml  main.py  manage.py  overview.html  pyproject.toml  start_health_guide_local.sh
.github/workflows/: back-ci.yaml  deploy-github.yaml  deploy.yaml
apps/authentication/: email_demo.py  error_handlers.py  hijack_views.py  middleware.py  models.py  serializers.py  services.py  tests.py  token_utils.py  tokens.py  urls.py  views.py
apps/emergency/: apps.py  models.py  serializers.py  services.py  views.py
apps/prescriptions/: admin.py  models.py  serializers.py  services.py  views.py
apps/reports/: chart_generator.py  models.py  serializers.py  services.py  views.py
apps/shared/: models.py  serializers.py
apps/vitals/: __init__.py  apps.py  services.py  views.py
backend/: requirements.txt  test_middleware.py  test_session_management.py
backend/docs/: TODO.md
backend/health_guide/: urls.py
docs/: error-handling.md  github-deployment.md  overview.md  product.md  structure.md  tech.md
frontend/: .env.example  about.html  api-test.html  dashboard.html  emergency.html  index.html  login.html  offline.html  package-lock.json  package.json  password-reset.html  prescriptions.html  profile.html  reports.html  services.html  setup-security.sh  signup.html  tailwind.config.js  test-api-config.sh  vitals.html  vite.config.js  vite.config.ts
health_guide/: asgi.py  wsgi.py
workflows/: deploy-production.yaml  deploy-staging.yaml  front-ci.yaml  integration.yaml
(+167 files in other folders)
